--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -86,7 +86,12 @@ iframe{
     color:black;
     padding: 20px;
 }
-
+.txt__prod{
+    font-size: 20px;
+}
+.txt__prod2{
+    @extend .txt__prod;
+}
 .d-flex{
     width: 80%;
     margin-left: 10%;
@@ -212,6 +217,9 @@ iframe{
         transition-property: all;
         transition-duration: 2s;
     }
+    .logo_redes{
+        @include sizes(55px,55px)
+    }
     .iframe{
         width: 70%;
     }
@@ -294,8 +302,10 @@ iframe{
         transition-property: all;
         transition-duration:3s;
     }
+    .logo_redes{
+        @include sizes(60px,60px)
+    }
     .box__prod{
-
         gap: 20px;
         margin-top: 25px;
     }
@@ -304,7 +314,10 @@ iframe{
         height: 90%;
     }
     .txt__prod{
-        font-size: 22px;
+        font-size: 23px;
+    }
+    .txt__prod2{
+        @extend .txt__prod;
     }
     .title_form{
         font-family:'Roboto';
@@ -409,5 +422,7 @@ iframe{
     .a, .b, .c{
         height: 10em;
     }
-
+    .logo_redes{
+        @include sizes(65px,65px)
+    }
 }
