--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
-  min-height: 90vh;
+  min-height: 80vh;
 }
 body h1 {
   font-family: "Poppins";
@@ -83,8 +83,8 @@ footer .redes {
   justify-content: center;
 }
 footer .logo_redes {
-  height: 50px;
   width: 50px;
+  height: 50px;
 }
 
 .contenedor__carrito {
@@ -133,6 +133,230 @@ footer .logo_redes {
   gap: 30px;
 }
 
+@media (min-width: 480px) {
+  header {
+    font-size: 20px;
+  }
+  .container-fluid {
+    padding-right: 5%;
+  }
+  .img_index {
+    margin-top: 30px;
+    gap: 40px;
+  }
+  .imagenes__index {
+    width: 260px;
+    height: 220px;
+  }
+  .imagenes__index:hover {
+    transform: scale(1.15);
+    transition-property: all;
+    transition-duration: 2s;
+  }
+  .logo_redes {
+    width: 55px;
+    height: 55px;
+  }
+  .iframe {
+    width: 70%;
+  }
+  .sharefooter, .ventas {
+    font-size: 18px;
+    font-style: italic;
+    font-weight: bold;
+  }
+  .contenedor__prod {
+    gap: 30px;
+    margin-top: 25px;
+  }
+  .box__prod {
+    margin-top: 20px;
+  }
+  .img__prod {
+    border: 20px none;
+    border-radius: 30px;
+    padding: 5px;
+    width: 70%;
+    height: 70%;
+  }
+  .primer-parrafo {
+    font-size: 2em;
+    font-style: italic;
+    font-weight: bold;
+  }
+  .box__carrito {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .img__carrito {
+    width: 30%;
+    margin-left: 10px;
+  }
+  .txt__carrito {
+    width: 40%;
+    height: 120px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  .a, .b, .c {
+    height: 15em;
+  }
+  .ai, .bi, .ci {
+    width: 150px;
+    height: 150px;
+  }
+  .grid-nosotros {
+    display: grid;
+    grid-template-areas: "ai a a" "b b bi" "ci c c";
+  }
+}
+@media (min-width: 768px) {
+  .img_index {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+  }
+  .imagenes__index {
+    width: 215px;
+    height: 195px;
+  }
+  .imagenes__index:hover {
+    transform: scale(1.2);
+    transition-property: all;
+    transition-duration: 3s;
+  }
+  .logo_redes {
+    width: 60px;
+    height: 60px;
+  }
+  .box__prod {
+    gap: 20px;
+    margin-top: 25px;
+  }
+  .img__prod {
+    width: 70%;
+    height: 90%;
+  }
+  .txt__prod, .txt__prod2 {
+    font-size: 23px;
+  }
+  .txt__prod2 {
+    font-size: 23px;
+  }
+  .title_form {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: lighter;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .consulta {
+    margin-bottom: 32%;
+  }
+  .box__carrito {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .img__carrito {
+    width: 30%;
+    margin-left: 10px;
+  }
+  .txt__carrito {
+    width: 40%;
+    height: 120px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  .title_prod {
+    font-size: 30px;
+  }
+  .ai, .bi, .ci {
+    width: 180px;
+    height: 180px;
+  }
+  .a, .b, .c {
+    height: 13em;
+    font-size: 20px;
+  }
+}
+@media (min-width: 1024px) {
+  .imagenes__index {
+    width: 255px;
+    height: 255px;
+  }
+  .imagenes__index:hover {
+    transform: rotate(30deg);
+    transition-property: all;
+    transition-duration: 3s;
+  }
+  .contenedor__prod {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    margin: 35px;
+  }
+  .txt__prod, .txt__prod2 {
+    margin-left: 0.5em;
+    font-size: 25px;
+  }
+  .title_form {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: lighter;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .consulta {
+    margin-bottom: 32%;
+  }
+  .box__carrito {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .img__carrito {
+    width: 30%;
+    margin-left: 10px;
+  }
+  .txt__carrito {
+    width: 40%;
+    height: 120px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  .title_prod {
+    font-size: 35px;
+  }
+  .a, .b, .c {
+    height: 10em;
+  }
+  .logo_redes {
+    width: 65px;
+    height: 65px;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -352,6 +576,10 @@ iframe {
     transition-property: all;
     transition-duration: 2s;
   }
+  .logo_redes {
+    width: 55px;
+    height: 55px;
+  }
   .iframe {
     width: 70%;
   }
@@ -427,6 +655,10 @@ iframe {
     transition-property: all;
     transition-duration: 3s;
   }
+  .logo_redes {
+    width: 60px;
+    height: 60px;
+  }
   .box__prod {
     gap: 20px;
     margin-top: 25px;
@@ -434,6 +666,12 @@ iframe {
   .img__prod {
     width: 70%;
     height: 90%;
+  }
+  .txt__prod, .txt__prod2 {
+    font-size: 23px;
+  }
+  .txt__prod2 {
+    font-size: 23px;
   }
   .title_form {
     font-family: "Roboto";
@@ -537,4 +775,8 @@ iframe {
   .a, .b, .c {
     height: 10em;
   }
-}
+  .logo_redes {
+    width: 65px;
+    height: 65px;
+  }
+}/*# sourceMappingURL=estilos.css.map */
