--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,500&family=Roboto:ital@0;1&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:ital,wght@0,500;1,500&family=Roboto:ital@0;1&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -14,18 +13,17 @@ body{
     min-height: 80vh;
     
     h1{
-    font-family:'Poppins';
+    font-family:'Bangers';
     font-style: normal;
-    font-weight: bold;
-    font-size: 38px;
+    font-weight: lighter;
+    font-size: 48px;
     text-align: center;
-    line-height: 35px;
+    line-height: 45px;
     letter-spacing: 2px;
-    color:rgb(1, 107, 188);
+    color:rgb(15, 111, 189);
     background-color:black;
     padding: 20px;
-    color: rgb(1, 107, 188);
-    text-shadow: 1px 1px 2px azure, 0 0 25px blue, 0 0 5px darkblue;
+    text-shadow: .5px 2px 3px rgb(188, 246, 246), 0 0 25px blue, 0 0 5px darkblue;
     }
 
     h2{
@@ -55,14 +53,14 @@ footer{
     background: linear-gradient(90deg, rgba(9,89,153,1) 0%, rgba(17,138,158,1) 40%, rgba(0,255,239,1) 100%);
     height: 230px;
     padding: 3em;
-    margin-top: 1em;
+    margin-top: 2em;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 
     .sharefooter, .ventas{
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: bold;
     }
