--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,26 +17,27 @@ body h1 {
   font-family: "Bangers";
   font-style: normal;
   font-weight: lighter;
-  font-size: 48px;
+  font-size: 65px;
   text-align: center;
-  line-height: 45px;
-  letter-spacing: 2px;
+  line-height: 60px;
+  letter-spacing: 3px;
   color: rgb(15, 111, 189);
   background-color: black;
-  padding: 20px;
+  padding: 35px;
   text-shadow: 0.5px 2px 3px rgb(188, 246, 246), 0 0 25px blue, 0 0 5px darkblue;
 }
 body h2 {
-  font-family: "Roboto";
+  font-family: "Bangers";
   font-style: normal;
-  font-weight: bold;
-  font-size: 25px;
+  font-weight: lighter;
+  font-size: 35px;
   text-align: center;
   line-height: 35px;
   letter-spacing: 2px;
   color: black;
   background: linear-gradient(90deg, rgb(9, 89, 153) 0%, rgb(17, 138, 158) 40%, rgb(0, 255, 239) 100%);
   padding: 20px;
+  text-shadow: white 0.1em 0.1em 0.3em;
 }
 body nav ul {
   display: flex;
@@ -44,6 +45,11 @@ body nav ul {
   justify-content: space-evenly;
   text-decoration: none;
   text-align: center;
+}
+
+.navbar-brand {
+  font-size: 1.75rem;
+  font-weight: bolder;
 }
 
 footer {
@@ -61,6 +67,7 @@ footer .sharefooter, footer .ventas {
   font-size: 18px;
   font-style: normal;
   font-weight: bold;
+  margin: 10px;
 }
 footer .foot {
   font-style: normal;
@@ -91,7 +98,7 @@ footer footer, footer .logo_redes {
   flex-direction: column;
   justify-content: flex-start;
   gap: 25px;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .contenedor__carrito .box_carrito {
   display: flex;
@@ -130,6 +137,7 @@ footer footer, footer .logo_redes {
   margin-left: 10%;
   padding: 20px;
   gap: 30px;
+  box-shadow: 8px 4px 1px black;
 }
 
 * {
@@ -169,6 +177,7 @@ header {
   border-radius: 20px;
   width: 260px;
   height: 220px;
+  box-shadow: 0 14px 14px 0px black;
 }
 
 .imagenes__index:hover {
@@ -274,6 +283,7 @@ iframe {
 
 .ai_box, .bi_box, .ci_box {
   width: 90%;
+  margin: 30px;
 }
 
 .ai, .bi, .ci {
@@ -293,40 +303,14 @@ iframe {
   padding: 10px;
   font-weight: bolder;
   font-size: 15px;
+  min-height: 220px;
+  box-shadow: 0 14px 14px 0px black;
 }
 
 .a, .b, .c, .ai, .bi, .ci {
   gap: 10px;
   border: 18px;
   border-radius: 18px;
-}
-
-.grid-nosotros {
-  grid-area: grid-nosotros;
-}
-
-.ai {
-  grid-area: ai;
-}
-
-.bi {
-  grid-area: bi;
-}
-
-.ci {
-  grid-area: ci;
-}
-
-.a {
-  grid-area: a;
-}
-
-.b {
-  grid-area: b;
-}
-
-.c {
-  grid-area: c;
 }
 
 .grid-nosotros {
@@ -542,11 +526,12 @@ iframe {
     margin-left: 10px;
   }
   .txt__carrito {
-    width: 40%;
+    width: 400px;
     height: 120px;
     margin-right: 20px;
     display: flex;
     justify-content: center;
+    font-size: 25px;
   }
   .title_prod {
     font-size: 35px;
