--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -30,14 +30,15 @@ header{
     margin-left: 15%;
     margin-bottom: 20px;
     padding: 20px;
-    gap: 40px;
+    gap: 40px;    
 }
 
 .imagenes__index{
     border: 15px azure;
     border-radius: 20px;
     width: 260px;
-    height: 220px;    
+    height: 220px;
+    box-shadow: 0 14px 14px 0px black;    
 }
 .imagenes__index:hover{
     transform: scale(1.1);
@@ -143,6 +144,7 @@ iframe{
 
 .ai_box, .bi_box, .ci_box{
     width: 90%;
+    margin: 30px;
 }
 
 .ai, .bi, .ci{
@@ -161,6 +163,8 @@ iframe{
     padding: 10px;
     font-weight: bolder;
     font-size: 15px;
+    min-height: 220px;
+    box-shadow: 0 14px 14px 0px black;
 }
 
 .a, .b, .c, .ai, .bi, .ci{
@@ -168,30 +172,6 @@ iframe{
     border: 18px;
     border-radius: 18px;
 }
-
-.grid-nosotros{
-    grid-area: grid-nosotros;
-}
-
-.ai{
-    grid-area: ai;
-}
-.bi{
-    grid-area: bi;
-}
-.ci{
-    grid-area: ci;
-}
-.a{
-    grid-area: a;
-}
-.b{
-    grid-area: b;
-}
-.c{
-    grid-area: c;
-}
-
 .grid-nosotros{
     background: rgb(79,111,238);
     background: linear-gradient(90deg, rgba(79,111,238,1) 0%, rgba(100,175,242,1) 50%, rgba(69,226,252,1) 100%);
@@ -222,11 +202,11 @@ iframe{
         height: 220px;    
     }
 
-
     @mixin sizes ($width, $height){
         width: $width;
         height: $height;
     }
+    
     footer{ 
         .logo_redes{
             @include sizes(55px,55px);
@@ -426,11 +406,12 @@ iframe{
         margin-left: 10px;
     }
     .txt__carrito{
-        width: 40%;
+        width: 400px;
         height: 120px;
         margin-right: 20px;
         display: flex;
         justify-content: center;
+        font-size: 25px;
     }
     .title_prod{
         font-size: 35px;
