--- a/sass/_carrito.scss
+++ b/sass/_carrito.scss
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 25px;
-    margin-top: 40px;
+    gap: 15px;
+    margin-top: 30px;
     .box_carrito{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: flex-start;
-    }
+}
+
 }
 .img__carrito{
     display: flex;
@@ -27,8 +28,6 @@
     font-family: "roboto";
     font-style: italic;
     text-align:center;
-    border: 3px solid black;
-    border-radius: 10px;
     margin-top: 5px;
     margin-left: 24%;
     display: flex;
@@ -40,5 +39,4 @@
     margin-left: 10%;
     padding: 20px;
     gap: 30px;
-    box-shadow: 8px 4px 1px black;
 }
