--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -10,7 +10,12 @@ body{
     display: flex;
     flex-direction: column;
     text-align: center;
-    min-height: 80vh;
+    min-height: 150vh;
+    margin-bottom: 20px;
+    ::-webkit-scrollbar{
+        width: 8px;
+        height: 15px;
+    }
     
     h1{
     font-family:'Bangers';
@@ -47,6 +52,7 @@ body{
     text-decoration: none;
     text-align: center;
     }
+    
 }
 .navbar-brand{
     font-size: 1.75rem;
@@ -58,7 +64,8 @@ footer{
     background: linear-gradient(90deg, rgba(9,89,153,1) 0%, rgba(17,138,158,1) 40%, rgba(0,255,239,1) 100%);
     height: 230px;
     padding: 3em;
-    margin-top: 2em;
+    margin-top: 3em;
+    margin-bottom: -18px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -97,3 +104,4 @@ footer{
         @include sizes (50px,50px);
     }
 }
+
