--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -68,9 +68,10 @@ iframe{
     margin-top: 5vh;    
     border: 5px none;
     border-radius: 25px;
+    max-width: 550px;
 }
 
-.img__prod{
+.img__prod{ 
     display: flex;
     flex-direction: column;
     height: 30%;
@@ -99,6 +100,13 @@ iframe{
 }
 .txt__prod2{
     @extend .txt__prod;
+}
+.addCart_prod{
+    background-color: rgb(1, 107, 188);
+    background: linear-gradient(90deg, rgba(9,89,153,1) 0%, rgba(17,138,158,1) 40%, rgba(0,255,239,1) 100%);
+    padding: 10px;
+    margin: 15px;
+    font-weight: bolder;
 }
 .d-flex{
     width: 80%;
@@ -369,17 +377,18 @@ iframe{
     }
     .contenedor__prod{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         justify-content: center;
     }
     .img__prod{
         width: 70%;
-        height: 95%;
+        height: 3%;
+        max-width: 504px;
+        max-height: 504px;
     }
     .txt__prod{
         margin-left: 0.5em;
-        font-size: 25px;
     }
     .title_form{
         font-family:'Roboto';
@@ -402,12 +411,12 @@ iframe{
         gap: 30px;
     }
     .img__carrito{
-        width: 30%;
+        width: 28%;
         margin-left: 10px;
     }
     .txt__carrito{
-        width: 400px;
-        height: 120px;
+        width: 600px;
+        height: 150px;
         margin-right: 20px;
         display: flex;
         justify-content: center;
@@ -428,6 +437,7 @@ iframe{
         border-radius: 40px;
     }
     footer{ 
+        //margin-top: 20px;
         .logo_redes{
             @include sizes(65px,65px);
         }
